# ot-harjoitustyo

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: Arkkitehtuurikuvaus  Arkkitehtuurikuvaus.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
harjoitustyo/: vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: defs.py  edit.py  fileutil.py  guihelpers.py  helpers.py  load.py  main.py  othello-gui.py  othello.py  othello_gui.py  pyproject.toml  settings.py  solve.py  sudoku.py
src/engine/: ai.py  move_gen.py  movegen.py
src/entity/: file_util.py  fileutil.py  internal_board.py  internalboard.py  settings.py
src/gui/: external_board.py  external_loader.py  external_settings.py  externalboard.py  externalloader.py  externalsettings.py  game_events.py  gameevents.py  gui_helpers.py  guihelpers.py  loader_events.py  loaderevents.py  settings_events.py  settingsevents.py
src/misc/: defs.py
src/othelloboard/: externalboard.py  internalboard.py
src/screens/: gameevents.py  settingsevents.py
src/tests/engine/: ai_test.py  move_gen_test.py
src/tests/entity/: file_util_test.py  internal_board_test.py  settings_test.py
