[tool.poetry]
name = "SudokuSolver"
version = "0.1.0"
description = "Sudoku analysis tool"
authors = ["Kim Kåhre"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pygame = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
