[tool.poetry]
name = "othello"
version = "0.1.0"
description = "Ohjelma othello pelaamiseen"
authors = ["Kim Kahre <kim.kahre@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.0"
invoke = "^1.6.0"
pytest = "^6.2.5"
coverage = "^6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.12.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
